--- a/src/components/Stepper/Stepper.module.scss
+++ b/src/components/Stepper/Stepper.module.scss
@@ -18,7 +18,7 @@
     padding: 0 0.75rem;
 
     &:not(:last-child)::after {
-      content: "";
+      content: '';
       position: absolute;
       top: 0.9rem;
       left: 50%;
