--- a/src/app/employee/EmployeeActions/EmployeeActions.module.scss
+++ b/src/app/employee/EmployeeActions/EmployeeActions.module.scss
@@ -4,3 +4,13 @@
   gap: 1rem;
   align-items: center;
 }
+
+@media (max-width: 700px) {
+  .employee-actions {
+    justify-content: stretch;
+
+    > * {
+      width: 100%;
+    }
+  }
+}
