--- a/src/app/employee/EmployeeTable/EmployeeTable.module.scss
+++ b/src/app/employee/EmployeeTable/EmployeeTable.module.scss
@@ -32,6 +32,17 @@
   }
 }
 
+@media (max-width: 700px) {
+  .employee-table {
+    gap: 0.75rem;
+
+    &__photo {
+      width: 2.125rem;
+      height: 2.125rem;
+    }
+  }
+}
+
 @keyframes employee-table-spin {
   to {
     transform: rotate(360deg);
