--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -27,3 +27,15 @@
     gap: 1rem;
   }
 }
+
+@media (max-width: 700px) {
+  .card {
+    border-radius: 1rem;
+    padding: 1rem;
+    gap: 1rem;
+
+    &__title {
+      font-size: 1.0625rem;
+    }
+  }
+}
