--- a/src/components/DropdownButton/DropdownButton.module.scss
+++ b/src/components/DropdownButton/DropdownButton.module.scss
@@ -81,3 +81,24 @@
     }
   }
 }
+
+@media (max-width: 700px) {
+  .dropdown {
+    width: 100%;
+
+    &__trigger {
+      width: 100%;
+      justify-content: center;
+    }
+
+    &__menu {
+      width: 100%;
+      min-width: 0;
+
+      &--right {
+        right: auto;
+        left: 0;
+      }
+    }
+  }
+}
