--- a/src/components/Toast/Toast.module.scss
+++ b/src/components/Toast/Toast.module.scss
@@ -100,6 +100,32 @@
   }
 }
 
+@media (max-width: 700px) {
+  .toast {
+    min-width: 0;
+    width: calc(100vw - 1rem);
+    max-width: calc(100vw - 1rem);
+
+    &--top-left,
+    &--top-center,
+    &--top-right {
+      top: 0.5rem;
+      left: 50%;
+      right: auto;
+      transform: translateX(-50%);
+    }
+
+    &--bottom-left,
+    &--bottom-center,
+    &--bottom-right {
+      bottom: 0.5rem;
+      left: 50%;
+      right: auto;
+      transform: translateX(-50%);
+    }
+  }
+}
+
 @keyframes toast-enter {
   from {
     opacity: 0;
